--- a/modules/database/templates/repository.tmpl
+++ b/modules/database/templates/repository.tmpl
@@ -1,16 +1,20 @@
 {{define "repository" -}}
 package database
 
+
+import (
+	model {{.Config.Name}}/model
+)
+
+// Env holds all interfaces describing the methods of the entity access structs.
+// Interfaces have to be implemented by concrete DB access functions 
 type Env struct {
 	{{- range .Entities }}
-	// Replace the reference to models.BookModel with an interface
-	// describing its methods instead. All the other code remains exactly
-	// the same.
 	{{.Name | lowercase | plural}} interface {
 		Get(id uint64) (*model.{{.Name}}, error)
 		GetAll() (model.{{.Name}}List, error) 
 		Delete(id uint64) error 
-		UpdateOrInsert(*model.{{.Name | lowercase}}) error 
+		UpdateOrInsert({{.Name | lowercase}} *model.{{.Name}}) error 
 	 	GetLabels() (Labels, error)
 		GetAllForParentID(parentId uint64, parentfield string) (model.{{.Name}}List, error)				
 	}
