--- a/modules/model/templates/model.tmpl
+++ b/modules/model/templates/model.tmpl
@@ -1,14 +1,16 @@
 {{define "model" -}}
+// Package model holds all entities and cross application definitions
 // Generated code - do not modify it will be overwritten!!
-// Time: {{.TimeStamp}}
+// Time of generation: {{.TimeStamp}}
 package model
 
 
 // {{.Name}} entity that consists of all attributes and provides key functions.
 // tags for database mapping is included
 type {{.Name}} struct {
-	Id     string     		`json:"id, db:id"`
-{{range .Fields}}{{template "kinds" .}}{{end -}}
+	ID     string     		`json:"id, db:id"`
+{{range .Fields}}{{template "modeltypes" .}}
+{{end}}
 	CreatedAt time.Time 	`json:"id, db:"created_at"`
 }
 
@@ -17,9 +19,8 @@ type {{.Name}}List []{{.Name}}
 
 // Label for {{.Name}} that will be shown in select boxes for one-2-many relationships
 // Select boxes returns the the ID of the parent Entity
-
 func (obj {{.Name}}) Label() (string) {
-	label:=fmt.Sprinf("{{range .Fields}}{{if eq .IsLabel true}}%v {{end}}{{end}}"{{range .Fields}}{{if eq .IsLabel true}}, .Name{{end}}{{end}})
+	label:=fmt.Sprinf("{{range .Fields}}{{if eq .IsLabel true}}%v {{end}}{{end}}"{{range .Fields}}{{if eq .IsLabel true}}, {{.Name}}{{end}}{{end}})
 	return label
 }
 
