--- a/modules/model/templates/modeltypes.tmpl
+++ b/modules/model/templates/modeltypes.tmpl
@@ -7,9 +7,10 @@
 {{- if eq .Kind "Email"}}	{{.Name}}	string	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`{{end}}
 {{- if eq .Kind "Tel"}}	{{.Name}}	string	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`{{end}}
 {{- if eq .Kind "Longtext"}}	{{.Name}}	string	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`{{end}}
-{{- if eq .Kind "Lookup"}}	{{.Name}}Id	int	`json:"{{lowercase .Name}}id, db:"{{lowercase .Name}}_id"`	// Lookup entity: {{.Name}}{{end}}
+{{- if eq .Kind "Time"}}	{{.Name}}	time.Time	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`{{end}}
+{{- if eq .Kind "Lookup"}}	{{.Name}}	int	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`	// Lookup entity: {{.Name}}{{end}}
 {{- if eq .Kind "Parent"}}	{{.Name | plural}}	{{.Object}}List	`json:"-"`	// one2many: childs only for view (not persistet){{end}}
-{{- if eq .Kind "Child"}}	{{.Name}}Id	int	`json:"{{lowercase .Name}}id, db:"{{lowercase .Name}}_id"`	// one2many: parent entity {{.Name}}{{end}}
-{{- if eq .Kind "manychild"}}	{{.Name}}Id	string	`json:"{{lowercase .Name}}id, db:"{{lowercase .Name}}_id"`	// many2many: Id of parent object, mappingtable: {{.Object}}{{end}}
+{{- if eq .Kind "Child"}}	{{.Name}}	int	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`	// one2many: parent entity {{.Name}}{{end}}
+{{- if eq .Kind "manychild"}}	{{.Name}}Id	string	`json:"{{lowercase .Name}}, db:"{{lowercase .Name}}"`	// many2many: Id of parent object, mappingtable: {{.Object}}{{end}}
 {{- if eq .Kind "manyparent"}}	{{.Name | plural}}	{{.Name}}List	`json:"-"`	// many2many: childs of target, mappingtable: {{.Object}}{{end}}
 {{- end}}
