--- a/modules/view/templates/listtable.html
+++ b/modules/view/templates/listtable.html
@@ -8,7 +8,7 @@
                                      <thead>
                                       <tr>
                                         {{range .Fields -}}
-                                          {{if eq .Type "manyparent" "parent" }}{{else}}<th>{{.Name}}</th>{{- end}}
+                                          {{if eq .Kind "Parent" }}{{else}}<th>{{.Name}}</th>{{- end}}
                                         {{end -}}
                                         <th></th>	
                                       </tr>
@@ -18,11 +18,11 @@
                                           <tr>
                                             {{- $entityname := .Name}}
                                             {{range .Fields}}
-                                              {{- if eq .Type "manyparent" "parent"}}
+                                              {{- if eq .Kind "Parent"}}
                                               {{- else}}<td>
-                                                {{- if eq .Type "child"}}{{"{{"}}.LabelBy{{.Object}}Id .{{.Name}}Id{{"}}"}}
+                                                {{- if eq .Kind "Child"}}{{"{{"}}.LabelBy{{.Object}}Id .{{.Name}}Id{{"}}"}}
                                                 {{- else if eq .IsLabel true}}<a href="/{{$entityname | plural | lowercase}}/{{"{{.Id}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a>
-                                                {{- else if eq .Type "bool"}}<span>
+                                                {{- else if eq .Kind "Boolean"}}<span>
                                                 {{"{{"}}if eq .{{.Name}} true{{"}}"}}<i class="far fa-check-square"></i>{{"{{"}}else{{"}}"}}<i class="far fa-square"></i>{{"{{"}}end{{"}}"}}
                                                 </span>
                                                 {{- else}}{{"{{"}}.{{.Name}}{{"}}"}}
