--- a/modules/model/templates/model.tmpl
+++ b/modules/model/templates/model.tmpl
@@ -1,12 +1,14 @@
 {{define "model" -}}
 // Package model holds all entities and cross application definitions
 // Generated code - do not modify it will be overwritten!!
-// Time of generation: {{.TimeStamp}}
+// Time of generation: {{.Entity.TimeStamp}}
 package model
 
 import (
-	 "time"
+	"time"
+	"fmt"
 )
+{{with .Entity}}
 
 // {{.Name}} entity that consists of all attributes and provides key functions.
 // tags for database mapping is included
@@ -22,9 +24,10 @@ type {{.Name}}List []{{.Name}}
 // Label for {{.Name}} that will be shown in select boxes for one-2-many relationships
 // Select boxes returns the the ID of the parent Entity
 func (obj {{.Name}}) Label() (string) {
-	label:=fmt.Sprinf("{{range .Fields}}{{if eq .IsLabel true}}%v {{end}}{{end}}"{{range .Fields}}{{if eq .IsLabel true}}, {{.Name}}{{end}}{{end}})
+	label:=fmt.Sprintf("{{range .Fields}}{{if eq .IsLabel true}}%v {{end}}{{end}}"{{range .Fields}}{{if eq .IsLabel true}}, obj.{{.Name}}{{end}}{{end}})
 	return label
 }
+{{end}}
 {{end}}
 
 
